# wandb-examples

./: .gitignore  README.md  pyproject.toml
scripts/: 0_initial_download.py  1_make_artifacts.py  2_use_artifacts.py  3_create_sweep.py  4_run_sweep.py  5_metrics_reports.py  config.py  sweep.yaml  train.py
