[project]
name = "wandb-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "sentencepiece>=0.2.0",
    "transformers[torch]>=4.47.0",
    "wandb[azure]>=0.19.0",
]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]
